--- a/src/main/java/computacionfim/conversorhorarios/InterfazConversor.form
+++ b/src/main/java/computacionfim/conversorhorarios/InterfazConversor.form
@@ -73,25 +73,16 @@
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="convertir_BTN" min="-2" pref="400" max="-2" attributes="0"/>
-                              <Component id="jSeparator1" max="32767" attributes="0"/>
-                              <Component id="jLabel2" alignment="0" min="-2" pref="360" max="-2" attributes="0"/>
-                              <Component id="directorio_LBL" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
-                              <Component id="archivo_LBL" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jLabel1" alignment="0" min="-2" pref="360" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="directorio_LBL2" pref="400" max="32767" attributes="0"/>
-                              <Component id="archivo_LBL2" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="convertir_BTN" max="32767" attributes="0"/>
+                      <Component id="jSeparator1" max="32767" attributes="0"/>
+                      <Component id="jLabel2" alignment="0" min="-2" pref="360" max="-2" attributes="0"/>
+                      <Component id="directorio_LBL" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
+                      <Component id="archivo_LBL" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLabel1" alignment="0" min="-2" pref="360" max="-2" attributes="0"/>
+                      <Component id="directorio_LBL2" max="32767" attributes="0"/>
+                      <Component id="archivo_LBL2" max="32767" attributes="0"/>
                   </Group>
+                  <EmptySpace min="30" pref="30" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -235,7 +226,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Convertir Arhivo"/>
+            <Property name="text" type="java.lang.String" value="Convertir Archivo"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="convertir_BTNMouseClicked"/>
